# free-er

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  TODO.md
crates/daemon/: Cargo.toml
crates/daemon/src/: app_state.rs  app_state_core.rs  app_state_impl.rs  app_state_tests.rs  blocking.rs  blocking_core.rs  blocking_impl.rs  blocking_tests.rs  calendar.rs  calendar_core.rs  calendar_impl.rs  calendar_tests.rs  ipc.rs  ipc_core.rs  ipc_impl.rs  ipc_tests.rs  local_server.rs  local_server_core.rs  local_server_impl.rs  local_server_tests.rs  main.rs  main_core.rs  main_impl.rs  main_tests.rs  persistence.rs  persistence_core.rs  persistence_impl.rs  persistence_tests.rs  pomodoro.rs  pomodoro_impl.rs  pomodoro_tests.rs  rule_matcher.rs  rule_matcher_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  ipc_client.rs  ipc_client_core.rs  ipc_client_impl.rs  ipc_client_tests.rs  lib.rs  main.rs  main_core.rs  main_impl.rs  main_tests.rs
crates/ui/src/app/: component.rs  component_core.rs  component_impl.rs  component_runtime.rs  component_tests.rs  focus_handlers.rs  focus_handlers_tests.rs  forwarders.rs  forwarders_core.rs  forwarders_impl.rs  forwarders_runtime.rs  forwarders_tests.rs  mod.rs  schedule_handlers.rs  schedule_handlers_core.rs  schedule_handlers_impl.rs  schedule_handlers_runtime.rs  schedule_handlers_tests.rs  settings_handlers.rs  settings_handlers_tests.rs  (+13 more)
crates/ui/tests/: gtk_allowed_lists.rs  gtk_app_status.rs  gtk_calendar_rules.rs  gtk_focus.rs  gtk_pomodoro.rs  gtk_schedule_component.rs  gtk_schedule_drawing.rs  gtk_settings.rs
(+64 files in other folders)
