[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "free-er-ui"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
relm4 = "0.10"
relm4-components = "0.10"
gtk4 = "0.10"
uuid = { workspace = true }
chrono = { workspace = true }
